feat: role precedence middleware
